--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-flask==3.0.3
+Flask==3.0.0
+python-dotenv==1.0.0
 groq==0.9.0
-python-dotenv==1.0.1
-httpx==0.27.0
+anthropic==0.18.0
+requests==2.31.0
+markdown==3.5.1
+gunicorn==21.2.0
